# rlptx

./: .gitignore  main.py  pyproject.toml
generated_ptx/: gemm4x4_gen_1747698962_iter0.ptx  gemm4x4_gen_1747699199_iter0.ptx  gemm4x4_gen_1747699199_iter1.ptx  gemm4x4_gen_1747699199_iter2.ptx
grpo/: README.md  evaluator.py  kernelbook_adapter.py  llms.py  main.py  process_kernelbook2.py  rldataset.py  utils.py
grpo/data/: curriculum_dataset.json  curriculum_dataset_medium.json  generator_v1.py  generator_v2.py  generator_v5.py  scaffold.py  triton_kernels_dataset.json  triton_kernels_dataset_v5.json
grpo/kernelbench/: create_sft_dataset.py  evaluate_template.py  evaluator.py  main.py  rldataset.py  sft_trainer.py  utils.py
grpo/old/: evaluator.py  kernel_evaluator.py  kernel_evaluator_kernelbook.py  process_kernelbook.py  rldatasets.py  rldatasets_kernel.py  rldatasets_kernelbook.py  test_evaluator.py  utils.py
grpo/tests/: test_adapter.py  test_dataset_loader.py
grpo/triton_grpo_output/: args.json  config.json  eval_metrics_0.txt  eval_metrics_100.json  eval_metrics_100.txt  eval_metrics_200.json  eval_metrics_200.txt  eval_metrics_300.json  eval_metrics_300.txt
llama4/: README.md  utils.py
sft_grpo/: README.md  filter_dataset.py  generator.py  sft_gen.py  trainer.py  triton_sandbox.py  utils.py
sft_grpo/kernels/: simple_kernel_test.py  test_kernel_2.py  test_kernel_3.py  test_kernel_with_docstring.py
sft_grpo/old/: example_usage.py  (+6 more)
src/: benchmark_gemm.cu  gemm4x4.ptx  gemm4x4_1d_tiled.ptx  gemm4x4_1d_tiled_godbolt2.ptx  ptx_agent.py
(+653 files in other folders)
