[project]
name = "rlptx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "html2text>=2025.4.15",
    #"flash-attn>=2.7.4.post1",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
